; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-tcp-open.c_create_tcp_socket.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-tcp-open.c_create_tcp_socket.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AF_INET = common dso_local global i32 0, align 4
@SOCK_STREAM = common dso_local global i32 0, align 4
@IPPROTO_IP = common dso_local global i32 0, align 4
@SOL_SOCKET = common dso_local global i32 0, align 4
@SO_REUSEADDR = common dso_local global i32 0, align 4
@INVALID_SOCKET = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 ()* @create_tcp_socket to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @create_tcp_socket() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = load i32, i32* @AF_INET, align 4
  %5 = load i32, i32* @SOCK_STREAM, align 4
  %6 = load i32, i32* @IPPROTO_IP, align 4
  %7 = call i64 @socket(i32 %4, i32 %5, i32 %6)
  store i64 %7, i64* %1, align 8
  %8 = load i64, i64* %1, align 8
  %9 = icmp sge i64 %8, 0
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  store i32 1, i32* %2, align 4
  %12 = load i64, i64* %1, align 8
  %13 = load i32, i32* @SOL_SOCKET, align 4
  %14 = load i32, i32* @SO_REUSEADDR, align 4
  %15 = call i32 @setsockopt(i64 %12, i32 %13, i32 %14, i32* %2, i32 4)
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = icmp eq i32 %16, 0
  %18 = zext i1 %17 to i32
  %19 = call i32 @ASSERT(i32 %18)
  %20 = load i64, i64* %1, align 8
  ret i64 %20
}

declare dso_local i64 @socket(i32, i32, i32) #1

declare dso_local i32 @ASSERT(i32) #1

declare dso_local i32 @setsockopt(i64, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
